# Kafra-Patcher

./: .gitignore  README.md  test_perf.rs
.github/workflows/: jekyll-gh-pages.yml  rust.yml
.jules/: bolt.md
examples/: kpatcher.yml
gruf/: Cargo.toml
gruf/src/: lib.rs
gruf/src/grf/: builder.rs  dyn_alloc.rs  reader.rs
gruf/src/grf/crypto/: des.rs  mod.rs
gruf/src/rgz/: mod.rs  reader.rs
gruf/src/thor/: builder.rs  reader.rs
kpatcher/: Cargo.toml  build.rs
kpatcher/resources/: kpatcher.exe.manifest
kpatcher/src/: discord_rpc.rs  main.rs  memory_reader.rs  process.rs  rich_presence_monitor.rs  ui.rs
kpatcher/src/patcher/: config.rs  core.rs  mod.rs  patching.rs
mkpatch/: Cargo.toml
mkpatch/src/: embed.rs  generator.rs  main.rs  patch_definition.rs  ui.rs
site/: index.html  script.js  styles.css
