[package]
name = "kpatcher"
version = "1.2.0"
authors = ["Lumen"]
edition = "2021"
license = "CC-BY-NC-4.0"
build = "build.rs"
description = "Kafra Patcher - A customizable patcher for Ragnarok Online"

[package.metadata.winres]
FileDescription = "Kafra Patcher - A customizable patcher for Ragnarok Online"
ProductName = "Kafra Patcher"
ProductVersion = "1.2.0"
License = "CC-BY-NC-4.0"
LegalCopyright = "Copyright © 2026 Kafra Patcher developers"


[dependencies]
gruf = { version = "0.2", path = "../gruf" }

open = "1.7.0"
wry = "0.24"
tao = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
futures = "0.3"
tokio = { version = "1.21", features = ["macros", "fs", "sync", "io-util"] }
reqwest = { version = "0.11", features = ["stream"] }
url = "2.2"
tempfile = "3.1"
log = { version = "0.4", features = ["release_max_level_off"] }
simple_logger = "1.11"
anyhow = "1.0"
serde_json = "1.0"
flume = "0.10"
tinyfiledialogs = "3.3"
structopt = "0.3"
scopeguard = "1.1"
advisory-lock = "0.3"
flate2 = "1.0"
aes-gcm = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = [
    "shellapi",
    "winuser",
    "wingdi",
    "dwmapi",
    "libloaderapi",
    "processthreadsapi",
    "memoryapi",
    "psapi",
    "handleapi",
    "tlhelp32",
    "minwindef",
    "winnt",
] }
discord-rich-presence = "1.1"
sysinfo = "0.30"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
twox-hash = "1.5"
walkdir = "2.3"
httptest = "0.16"
