[package]
name = "mkpatch"
version = "1.2.0"
authors = ["Lumen"]
edition = "2021"
build = "build.rs"
description = "Gerador de patches para o Kafra Patcher"

[dependencies]
log = "0.4"
simple_logger = "1.11"
anyhow = "1.0"
eframe = "0.27"
rfd = "0.14"
flate2 = "1.0"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
